<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
         >

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30sp"
             android:layout_gravity="center"
             android:text="@string/emptitle"
             android:textAlignment="center"
             android:textSize="35sp"
             android:textStyle="bold"
             android:textColor="#004661"
             />

         <ImageView
             android:layout_width="250sp"
             android:layout_height="200sp"
             android:layout_gravity="center"
             android:src="@drawable/salary"
             />

         </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         >

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20sp"
             android:text="@string/empname"
             android:textSize="20sp"
             android:textStyle="italic"
             android:textColor="@color/teal_700"
             />

         <EditText
             android:id="@+id/empname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textColor="@color/teal_700"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

     </LinearLayout>


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         >

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20sp"
             android:text="@string/empsalary"
             android:textSize="20sp"
             android:textStyle="italic"
             android:textColor="@color/teal_700"
             />

         <EditText
             android:id="@+id/empsalary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textColor="@color/teal_700"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         >

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20sp"
             android:text="@string/emptax"
             android:textSize="20sp"
             android:textStyle="italic"
             android:textColor="@color/teal_700"
             />

         <EditText
             android:id="@+id/emptax"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textColor="@color/teal_700"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"

             />

     </LinearLayout>


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         >

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20sp"
             android:text="@string/empnsal"
             android:textSize="20sp"
             android:textStyle="italic"
             android:textColor="@color/teal_700"
             />

         <EditText
             android:id="@+id/empnsal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textColor="@color/teal_700"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"

             />

     </LinearLayout>


     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         >

         <Button
             android:id="@+id/btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/teal_700"
             android:text="@string/btnok"
             android:textColor="#ffffff"

             tools:ignore="TextContrastCheck" />

         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#ffffff"
             android:background="@color/design_default_color_error"
             android:text="@string/btnclear"
             android:id="@+id/btn2"

             />


     </LinearLayout>




 </LinearLayout>



</LinearLayout>